[tool.poetry]
name = "free-proxy-list-net-parser"
version = "1.0.0"
description = "Get currently available free proxies from free-proxy-list.net"
authors = ["selforg-level"]
license = "MIT"
readme = "README.md"
packages = [{include = "free_proxy_list"}]

[tool.poetry.dependencies]
python = "^3.12"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
