[tool.poetry]
name = "free-proxy-list-net-parser"
version = "1.0.0"
description = "Get currently available free proxies from free-proxy-list.net"
authors = ["selforg-level"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
beautifulsoup4 = "4.12.3"
certifi = "2024.6.2"
charset-normalizer = "3.3.2"
idna = "3.7"
requests = "2.32.3"
soupsieve = "2.5"
urllib3 = "2.2.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
